[package]
name = "helios-ls"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Ta-Seen Islam <taseen00.islam@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
env_logger = "0.8.3"
flume = "0.10.2"
helios-diagnostics = { git = "https://github.com/helios-lang/helios", branch = "indentation" }
helios-query = { git = "https://github.com/helios-lang/helios", branch = "indentation" }
log = "0.4.14"
lsp-types = "0.89.0"
salsa = "0.16.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
